🐛 Fix parámetro faltante en route
